# csvql

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.githooks/: pre-push
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_issue.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
.superpowers/sdd/: task-3-report.md  task-4-report.md  task-5-report.md  task-6-fix-report.md  task-6-report.md
docs/: ARCHITECTURE.md  CODEX_CAPABILITY_REVIEW.md  PRODUCT_DIRECTION.md  ROADMAP.md  benchmarking.md  cli-reference.md  development.md  failure-gallery.md  faq.md  getting-started.md  json-contracts.md  release-candidate-proof-2026-07-02.md  release-readiness.md  releasing.md  troubleshooting.md  tui-guide.md  tui-qol-qa.md  v1-manual-qa.md  v1.0.2-tui-spill-reliability-design.md  v2-point-and-query-design.md
docs/governance/audits/: 2026_07_12_project_stewardship_audit.md
docs/release-notes/: v1.md
docs/superpowers/plans/: 2026-06-26-inspect-sample.md  2026-06-26-project-catalog.md  2026-06-27-csvql-v04-saved-workflows.md  2026-06-28-csvql-v05-profiling.md  2026-06-29-csvql-doctor.md  2026-06-29-csvql-json-contracts.md  2026-06-29-csvql-v06-data-quality-checks.md  2026-06-29-csvql-v07-benchmark-release-hardening.md  2026-06-29-csvql-v08-example-project-walkthrough.md  2026-06-30-csvql-failure-gallery.md  2026-06-30-csvql-python-api.md  2026-06-30-csvql-v1-authority-release-readiness.md  2026-06-30-csvql-v1-contract-stabilization.md  2026-06-30-csvql-v1-proof-refresh-gap-closure.md  2026-06-30-csvql-v1-release-workflow.md  2026-07-01-csvql-derived-sources.md  2026-07-01-csvql-menu-tui.md  2026-07-01-csvql-workbench-lite-tui.md  2026-07-02-csvql-editor-quality-v2.md  2026-07-02-csvql-release-candidate-proof-packet.md  2026-07-02-csvql-release-candidate-proof-refresh.md  2026-07-02-csvql-source-intelligence-v1.md  2026-07-02-csvql-tui-error-recovery-polish.md  2026-07-02-csvql-v1-polish-program.md  2026-07-03-localql-open-source-launch-readiness.md  2026-07-04-tui-qol-qa-gate.md  2026-07-05-tui-qol-repair.md  2026-07-06-tui-adversarial-follow-up.md  2026-07-07-release-proof-inventory.md  2026-07-07-three-os-tui-release-proof.md  2026-07-07-tui-qol-scope-closeout.md  2026-07-07-vscode-alt-keybinding-fallback.md  2026-07-08-cross-os-proof-reconciliation.md  2026-07-08-tui-sql-assistance.md  2026-07-08-tui-tab-completion-follow-up.md
docs/superpowers/specs/: 2026-06-26-csvql-v03-project-catalog-design.md  2026-06-26-csvql-v1-quality-spine-design.md  2026-06-27-csvql-v04-saved-workflows-design.md  2026-06-28-csvql-v05-profiling-design.md  2026-06-29-csvql-doctor-design.md  2026-06-29-csvql-json-contracts-design.md  2026-06-29-csvql-v06-data-quality-checks-design.md  2026-06-29-csvql-v07-benchmark-release-hardening-design.md  2026-06-29-csvql-v08-example-project-walkthrough-design.md  2026-06-29-csvql-v1-expanded-roadmap-design.md  2026-06-30-csvql-failure-gallery-design.md  2026-06-30-csvql-python-api-design.md  2026-06-30-csvql-v1-authority-release-readiness-design.md  2026-06-30-csvql-v1-contract-stabilization-design.md  2026-06-30-csvql-v1-proof-refresh-gap-closure-design.md  2026-06-30-csvql-v1-release-workflow-design.md  2026-07-01-csvql-derived-sources-design.md  2026-07-01-csvql-menu-tui-design.md  2026-07-01-csvql-workbench-lite-design.md  2026-07-02-csvql-editor-quality-v2-design.md  2026-07-02-csvql-release-candidate-proof-refresh-design.md  2026-07-02-csvql-source-intelligence-v1-design.md  2026-07-02-csvql-tui-error-recovery-polish-design.md  2026-07-02-csvql-v1-polish-program-design.md  2026-07-03-localql-open-source-launch-readiness-design.md  2026-07-04-tui-qol-qa-gate-design.md  2026-07-05-tui-qol-repair-design.md  2026-07-06-tui-adversarial-follow-up-design.md  2026-07-07-release-proof-inventory-design.md  2026-07-07-three-os-tui-release-proof-design.md  2026-07-07-tui-qol-scope-closeout-design.md  2026-07-07-vscode-alt-keybinding-fallback-design.md  (+3 more)
examples/saas_revenue/: .csvql.yml  README.md
examples/sales/: .csvql.yml
scripts/: audit_package_contents.py  audit_public_release.py  benchmark_csvql.py  git_public_push_guard.py  install_git_safety.py  release-audit-tool-requirements.txt  release-build-constraints.txt  render_benchmark_summary.py  verify_dependency_audit.py  verify_installed_artifacts.py  verify_release_artifacts.py  verify_release_readiness.py
src/csvql/: __init__.py  __main__.py  api.py  atomic_write.py  benchmark_data.py  benchmark_runner.py  benchmarking.py  checks.py  cli.py  doctor.py  engine.py  exceptions.py  export.py  inspection.py  models.py  output.py  profiling.py  project_config.py  quality.py  query_workflow.py  release_readiness.py  source.py  source_resolver.py  sql_file.py  sql_utils.py  table_mapping.py  terminal_text.py  tui_app.py  tui_editor.py  tui_help.py  tui_launcher.py  tui_native_picker.py  tui_result_store.py  tui_results.py  tui_sql_assist.py  tui_state.py  tui_workflows.py
tests/: test_api.py  test_atomic_write.py  test_benchmark_data.py  test_benchmark_runner.py  test_benchmarking.py  test_checks.py  test_cli_check.py  test_cli_doctor.py  test_cli_inspect_sample.py  test_cli_menu.py  test_cli_profile.py  test_cli_project_catalog.py  test_cli_query.py  test_cli_run_export.py  test_dependency_audit.py  test_doctor.py  test_example_project.py  test_export.py  test_failure_gallery.py  test_git_public_push_guard.py  test_inspection.py  test_install_git_safety.py  test_installed_artifacts.py  test_models.py  test_open_source_launch_docs.py  test_output.py  test_package_audit.py  test_profiling.py  test_project_config.py  test_public_release_audit.py  test_quality.py  test_query_workflow.py  test_release_artifacts.py  test_release_readiness.py  test_source.py  test_source_resolver.py  test_sql_file.py  test_sql_utils.py  test_table_mapping.py  test_terminal_text.py  (+11 more)
(+9 files in other folders)
