[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "csvql"
version = "1.0.0"
description = "A lightweight DuckDB-powered CLI for querying local CSV files like SQL tables."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [{ name = "Richard Demke" }]
keywords = ["csv", "duckdb", "sql", "cli", "data-engineering"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Utilities",
]
dependencies = [
    "duckdb>=1.5.0,<2",
    "pyyaml>=6.0.3",
    "rich>=13.7.1",
    "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11.0",
    "pytest>=8.2.0",
    "ruff>=0.6.0",
]

[project.scripts]
csvql = "csvql.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/csvql"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["duckdb"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
