[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "localql"
version = "1.0.2"
description = "LocalQL packages csvql, a DuckDB-powered CLI for querying local CSV files like SQL tables."
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Richard Demke" }]
keywords = ["csv", "duckdb", "sql", "cli", "local-analytics", "data-engineering"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Utilities",
]
dependencies = [
    "duckdb>=1.5.0,<2",
    "pyyaml>=6.0.3",
    "rich>=13.7.1",
    "typer>=0.12.3",
]

[project.urls]
Repository = "https://github.com/highlordleonas/csvql"
Issues = "https://github.com/highlordleonas/csvql/issues"
Changelog = "https://github.com/highlordleonas/csvql/blob/main/CHANGELOG.md"
"Release notes" = "https://github.com/highlordleonas/csvql/blob/main/docs/release-notes/v1.md"

[project.optional-dependencies]
dev = [
    "mypy>=1.11.0",
    "pytest>=8.2.0",
    "ruff>=0.6.0",
]
tui = [
    "textual>=8.2.8",
]

[project.scripts]
csvql = "csvql.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/csvql"]

[tool.hatch.build.targets.sdist]
exclude = ["/AGENTS.md", "/docs/governance/audits", "/docs/superpowers"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["duckdb"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
